# iroh-metrics

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: beta.yaml  ci.yaml  docs.yaml  flaky.yaml  release.yaml  tests.yaml
examples/: iroh_socket_style.rs  labels.rs
iroh-metrics-derive/: CHANGELOG.md  Cargo.toml
iroh-metrics-derive/src/: lib.rs
n0-metrics-derive/: CHANGELOG.md  Cargo.toml
n0-metrics-derive/src/: lib.rs
pr/1/docs/: search-index.js  src-files.js
pr/1/docs/iroh_metrics/: fn.parse_prometheus_metrics.html  macro.inc.html  macro.set.html
pr/10/docs/iroh_metrics/: all.html  enum.Error.html  fn.parse_prometheus_metrics.html  index.html  macro.dec_by.html  macro.inc.html  macro.inc_by.html  struct.PushMetricsConfig.html
pr/100/docs/iroh_metrics/: derive.MetricsGroup.html  trait.MetricsGroupSet.html
pr/101/docs/iroh_metrics/: all.html  fn.parse_prometheus_metrics.html
pr/101/docs/iroh_metrics_derive/: derive.Iterable.html
pr/103/docs/iroh_metrics/: macro.set.html  struct.Counter.html
pr/104/docs/iroh_metrics/: struct.Registry.html  trait.MetricsSource.html
pr/105/docs/iroh_metrics/: derive.MetricsGroup.html  struct.Histogram.html  type.RwLockRegistry.html
pr/106/docs/iroh_metrics/: enum.MetricValue.html  macro.inc.html  trait.Metric.html
pr/108/docs/iroh_metrics/: derive.MetricsGroupSet.html  struct.Gauge.html
pr/109/docs/iroh_metrics/: enum.Error.html
pr/11/docs/: search-index.js
pr/11/docs/iroh_metrics/: enum.Error.html  fn.parse_prometheus_metrics.html  index.html  macro.dec.html  macro.dec_by.html  macro.inc.html  macro.inc_by.html  macro.set.html  struct.PushMetricsConfig.html
pr/110/docs/iroh_metrics/: sidebar-items.js  struct.MetricItem.html
pr/111/docs/: search-index.js
pr/111/docs/iroh_metrics/: enum.Error.html  index.html
pr/112/docs/: search-index.js
pr/112/docs/iroh_metrics/: all.html  derive.MetricsGroupSet.html  macro.dec.html  struct.Family.html  struct.FamilyItem.html  struct.Gauge.html  struct.MetricItem.html  struct.Registry.html  trait.EncodeLabelValue.html  trait.FamilyEncoder.html  trait.Metric.html  trait.MetricsGroup.html
pr/113/docs/: search-index.js
pr/113/docs/iroh_metrics/: derive.MetricsGroup.html  enum.Error.html  enum.LabelValue.html  enum.MetricType.html  index.html  struct.Counter.html  struct.Family.html  struct.FamilyItem.html  struct.Registry.html  trait.EncodeLabelSet.html  trait.EncodeLabelValue.html  trait.FamilyEncoder.html  trait.MetricsSource.html  type.LabelPair.html  type.RwLockRegistry.html
pr/113/docs/iroh_metrics_derive/: derive.EncodeLabelValue.html
pr/114/docs/: search-index.js
pr/114/docs/iroh_metrics/: trait.FamilyEncoder.html  type.RwLockRegistry.html
pr/115/docs/: search-index.js
pr/115/docs/iroh_metrics/: all.html  derive.EncodeLabelSet.html  derive.EncodeLabelValue.html  enum.Error.html  enum.LabelValue.html  index.html  macro.dec.html  macro.dec_by.html  macro.inc.html  macro.inc_by.html  macro.set.html  sidebar-items.js  struct.NoLabels.html  struct.Registry.html  trait.EncodeLabelSet.html  trait.MetricsSource.html
pr/115/docs/iroh_metrics_derive/: index.html
pr/116/docs/iroh_metrics/: enum.MetricValue.html  fn.parse_prometheus_metrics.html  struct.FamilyItem.html  struct.Histogram.html  type.LabelPair.html
pr/116/docs/iroh_metrics_derive/: all.html  derive.EncodeLabelSet.html  sidebar-items.js
pr/12/docs/: search-index.js
pr/12/docs/iroh_metrics/: macro.dec.html  macro.inc.html
pr/13/docs/iroh_metrics/: derive.MetricsGroup.html  enum.Error.html  enum.MetricType.html  enum.MetricValue.html  index.html  macro.dec.html  macro.dec_by.html  macro.inc_by.html  macro.set.html  struct.Counter.html  struct.Gauge.html  struct.MetricItem.html  struct.MetricsIter.html  struct.PushMetricsConfig.html
pr/13/docs/iroh_metrics_derive/: index.html
pr/14/docs/: search-index.js
pr/14/docs/iroh_metrics/: all.html  macro.inc_by.html  sidebar-items.js  struct.PushMetricsConfig.html
pr/15/docs/: search-index.js  src-files.js
pr/15/docs/iroh_metrics/: all.html  derive.MetricsGroup.html  enum.Error.html  enum.MetricValue.html  fn.parse_prometheus_metrics.html  index.html  macro.dec.html  macro.dec_by.html  macro.inc.html  macro.inc_by.html  macro.set.html  sidebar-items.js  struct.Counter.html  struct.Gauge.html  struct.MetricDescription.html  struct.MetricItem.html  struct.MetricValue.html  struct.PushMetricsConfig.html  struct.Registry.html  struct.ValuesIter.html  trait.HistogramType.html  trait.Metric.html  trait.MetricExt.html  trait.MetricSet.html  trait.MetricType.html  trait.MetricsGroup.html  trait.MetricsGroupExt.html  trait.MetricsGroupSet.html
pr/16/docs/: search-index.js  src-files.js
pr/16/docs/iroh_metrics/: all.html  derive.Iterable.html  derive.MetricsGroup.html  enum.Error.html  enum.MetricType.html  enum.MetricValue.html  fn.parse_prometheus_metrics.html  index.html  macro.dec.html  macro.dec_by.html  macro.inc.html  macro.inc_by.html  macro.set.html  sidebar-items.js  struct.Counter.html  struct.DecribeIter.html  struct.FieldIter.html  struct.MetricDescription.html  struct.MetricItem.html  trait.IntoIterable.html  (+4 more)
pr/18/docs/: search-index.js
pr/20/docs/: src-files.js
pr/22/docs/: search-index.js
pr/23/docs/: search-index.js
pr/24/docs/: search-index.js
pr/27/docs/: search-index.js  settings.html
pr/28/docs/: search-index.js
pr/29/docs/: search-index.js
pr/3/docs/: search-index.js
pr/33/docs/: search-index.js
pr/4/docs/: crates.js  search-index.js  src-files.js
pr/49/docs/: search-index.js
pr/55/docs/: search-index.js
pr/56/docs/: search-index.js
pr/58/docs/: search-index.js
pr/59/docs/: search-index.js
pr/6/docs/: crates.js
pr/66/docs/: search-index.js
pr/7/docs/: help.html
pr/75/docs/: search-index.js  src-files.js
pr/80/docs/: crates.js  settings.html
pr/90/docs/: search-index.js
pr/91/docs/: help.html
pr/98/docs/: src-files.js
src/: base.rs  core.rs  encoding.rs  family.rs  iterable.rs  labels.rs  lib.rs  metrics.rs  registry.rs  service.rs  static_core.rs
(+1330 files in other folders)
