[workspace]
members = ["n0-metrics-derive"]

[package]
name = "n0-metrics"
version = "1.0.0-rc.0"
edition = "2024"
readme = "README.md"
description = "metrics for iroh"
license = "MIT OR Apache-2.0"
authors = ["arqu <asmir@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/n0-metrics"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.85"

[lints.rust]
missing_debug_implementations = "warn"
# We use this --cfg for documenting the cargo features on which an API
# is available.  To preview this locally use: RUSTFLAGS="--cfg
# iroh_docsrs cargo +nightly doc --all-features".  We use our own
# iroh_docsrs instead of the common docsrs to avoid also enabling this
# feature in any dependencies, because some indirect dependencies
# require a feature enabled when using `--cfg docsrs` which we can not
# do.  To enable for a crate set `#![cfg_attr(iroh_docsrs,
# feature(doc_cfg))]` in the crate.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(iroh_docsrs)"] }

[lints.clippy]
unused-async = "warn"

[dependencies]
n0-metrics-derive = { path = "./n0-metrics-derive", version = "1.0.0-rc.0" }
itoa = "1"
ryu = "1"
portable-atomic = { version = "1", features = ["serde"] }
postcard = { version = "1.1.1", default-features = false, features = ["use-std"], optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
n0-error = "1.0.0-rc.0"
tracing = "0.1.44"

# static_core feature
erased_set = { version = "0.8", optional = true }

# service feature
http-body-util = { version = "0.1.0", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1.17", features = ["tokio"], optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rustls-platform-verifier = { version = "0.7", optional = true }
tokio = { version = "1.47", features = ["rt", "net", "fs", "macros"], optional = true }
tokio-util = { version = "0.7.18", features = ["rt"], optional = true }

[dev-dependencies]
postcard = { version = "1.1.1", features = ["use-std"] }
prometheus-parse = "0.2"
tokio = { version = "1", features = ["io-util", "sync", "rt", "net", "fs", "macros", "time", "test-util"] }

[features]
default = ["metrics"]
# Enables counters and other metrics being tracked.
# If disabled, all counters return 0. Macros like `inc!` will do nothing.
metrics = []
# Enables importing/exporting metrics to bytes via postcard
postcard = ["dep:postcard"]
# Enables functionality to run a local metrics server that current metrics
# are served at in prometheus format.
# Pulls in quite a few libraries to make exposing an HTTP server possible.
service = [
    "metrics",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:reqwest",
    "dep:rustls",
    "dep:rustls-platform-verifier",
    "dep:tokio",
    "dep:tokio-util",
]
# Enables a global, static metrics collector
static_core = ["metrics", "dep:erased_set"]

[package.metadata.docs.rs]
all-features = true
