[package]
name = "iroh-metrics-derive"
version = "0.1.0"
edition = "2021"
description = "derive macros for iroh-metrics"
license = "MIT OR Apache-2.0"
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-metrics"

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = "2"
